Fix main nav spillover
Due to recently added additional nav items, the main nav spills on two lines on browser widths 768px–991px

--- a/source/style.scss
+++ b/source/style.scss
@@ -45,6 +45,12 @@ body {
     a:active {
         background: $p6col2!important;
     }
+
+    .nav a {
+        font-size: 93%;
+        padding-left: 13px;
+        padding-right: 13px;
+    }
 }
 
 footer {
